# DSAN6700-group6-project

./: .gitignore  README.html  README.md  app.py  docker-compose.yml  dockerfile  eda.ipynb  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
app/: app.py  requirements.txt
code/data_clean/: data_clean_book_sample.ipynb  data_clean_movie_sample.ipynb  data_clean_music_sample.ipynb
data/embeddings/: book_embeddings.npy  book_embeddings.npz  destination_embeddings.npy  destination_embeddings.npz  destinations_faiss_ip.index  movie_embeddings.npy  movie_embeddings.npz  music_embeddings.npy  music_embeddings.npz
data/feedback/: user_feedback.jsonl
data_clean/movie/: data_clean_movie_sample.ipynb
notebooks_sample/: faiss_demo.ipynb
notebooks_sample/data_clean/: data_clean_book.ipynb  data_clean_book_sample.ipynb  data_clean_city_sample.ipynb  data_clean_movie_sample.ipynb  data_clean_music_sample.ipynb
notebooks_sample/data_clean/.github/ISSUE_TEMPLATE/: config.yml  data_issue.md  feature_request.md  question.md
notebooks_sample/embedding/: embedding.ipynb
scr/: build_faiss.py  generate_embeddings.py
scr/sample/old_embeddings/: music_embeddings.npy
src/: build_faiss.py  feedback.py  process_data_with_tfidf.py  search_service.py
src/sample/old_embeddings/: destination_embeddings.npy  movie_embeddings.npy
tests/: test_search_service.py
